--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
 
-  font-family: "PT Sans Narrow", Arian, sans-serif;
+  font-family: 'Roboto', Arian,sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
@@ -11,9 +11,24 @@ body {
   background-color: #ffffff;
 }
 
+.visually-hidden:not(:focus):not(:active) {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .inner-page {
   color:#283136;
-  
   background-color: white;
 }
 
@@ -34,18 +49,11 @@ button {
   font: inherit;
 
   text-align: center;
-  color: #fb565a;
+  color: #ffffff;
   vertical-align:middle;
   text-transform: uppercase;
 
-  background-color: #eeeeee;
   border: none;
-}
-
-.button:hover,
-.button:focus,
-.button:active {
-  background-color: #663d15;
 }
 
 .main-navigation {
@@ -53,10 +61,9 @@ button {
   line-height: 30px;
   color: #000000;
   text-transform: uppercase;
-
-  background-color: #eeeeee;
+  text-align: left;
 }
-
+    
 .site-navigation {
   list-style: none;
 }
@@ -65,11 +72,20 @@ button {
   color: #000000;
 }
 
-.site-navigation a:hover,
-.site-navigation a:focus {
-  background-color: #242424;
+.site-navigation a:hover {
+  color:#fb565a;
 }
 
+.site-navigation a:focus {
+  color:rgba(0, 0, 0, 0.3);
+}
+
+.site-navigation a:active {
+  text-decoration: none; 
+  border-bottom:1px solid red; 
+  color: #000000;
+}
+/*не могу разобраться, как сделать подчёркивание ссылки, когда находишься на той странице, на которую ссылается данная ссылка*/
 .catalog-item {
   list-style: none;
 }
@@ -97,16 +113,70 @@ button {
 
 .button-red {
   background-color: #fb565a;
+  font-size: 16px;
+  line-height: 18px;
+  text-align: center;
+  font-weight: 400;
+  color:#ffffff;
+  width:160px;
+  height: 50px;
+  text-transform: uppercase;
 }
 
+.button-red a:hover {
+  background-color: #e74246;
+}
+
+.button-red a:focus,
+.button-red a:active {
+  background-color:#d7373b;
+  color:rgba(255, 255, 255, 0.3); 
+}
+/* красная кнопка не меняет цвет текста при нажатии*/
 .button-green {
-  background-color: green;
+  background-color: #00ca74;
+  text-transform: uppercase;
+  font-size: 16px;
+  line-height: 18px;
+  text-align: center;
+  font-weight: 400;
+  color:#ffffff;
+  width:160px;
+  height: 50px;
+}
+
+.button-green a:hover {
+  background-color: #00bc6c;
+}
+
+.button-green a:focus,
+.button-green a:active {
+  background-color:#00aa62;
+  color:rgba(255, 255, 255, 0.3); 
 }
 
 .button-yellow {
   background-color: #efc84a;
+  text-transform: uppercase;
+  font-size: 16px;
+  line-height: 18px;
+  text-align: center;
+  font-weight: 400;
+  color:#ffffff;
+  width:160px;
+  height: 50px;
 }
 
+.button-yellow a:hover {
+  background-color: #eab534;
+}
+
+.button-yellow a:focus,
+.button-yellow a:active {
+  background-color:#e5a722;
+  color:rgba(255, 255, 255, 0.3); 
+}
+/*зелёная и жёлтая тоже не меняют цвет*/
 .filters fieldset {
   border: none;
 }
@@ -178,9 +248,20 @@ filter ul {
 }
 
 .social-button {
-  color:#e1e1e1;
+  color:#ffffff;
+  background-color: #e1e1e1;
 }
 
+.social-button a:hover {
+  background-color: #e74246;
+}
+
+.social-button a:focus,
+.social-button a:active {
+  background-color:#d7373b;
+  color:rgba(0, 1, 1, 0.1); 
+}
+/*социальные кнопки тоже не меняются при нажатии*/
 .modal {
   color: #000000;
   background-color:#ffffff;
