--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 
   min-width: 1200px; 
 
-  font-family: "Roboto", "Arian", sans-serif;
+  font-family: "Roboto", "Arial", sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
@@ -45,14 +45,8 @@ body {
 }
 
 .main-header {
-  margin: 0;
-  padding: 0;
-  width: 1440px;
   background-color: #eeeeee;
-  height: 70px;
-  margin-left: auto;
-  margin-right: auto;
-}
+ }
 
 .page-title {
   font-size: 55px;
@@ -254,23 +248,6 @@ img {
   background-color: #ffffff;
 }
 
-.catalog-list-page-catalog {
-  display: flex;
-  flex-wrap: wrap;
- 
-}
-
-.catalog-item-page-catalog {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-
-
-  margin-bottom: 20px;
-  margin-right: 40px;
-}
-
 .button-red {
   background-color: #fb565a;
   text-transform: uppercase;
@@ -291,7 +268,7 @@ img {
 .button-red:active {
   background-color:#d7373b;
   color:rgba(255, 255, 255, 0.3); 
-  box-shadow:0px 3px 0px 0px rgba(0, 1, 1, 0.1)
+  box-shadow:inset 0px 3px 0px 0px rgba(0, 1, 1, 0.1)
 }
 
 .button-green {
@@ -314,7 +291,7 @@ img {
 .button-green:active {
   background-color:#00aa62;
   color:rgba(255, 255, 255, 0.3); 
-  box-shadow:0px 3px 0px 0px rgba(0, 1, 1, 0.1)
+  box-shadow:inset 0px 3px 0px 0px rgba(0, 1, 1, 0.1)
 }
 
 .button-yellow {
@@ -337,7 +314,7 @@ img {
 .button-yellow:active {
   background-color:#e5a722;
   color:rgba(255, 255, 255, 0.3); 
-  box-shadow:0px 3px 0px 0px rgba(0, 1, 1, 0.1)
+  box-shadow:inset 0px 3px 0px 0px rgba(0, 1, 1, 0.1)
 }
 
 .filter-item {
@@ -400,7 +377,7 @@ img {
 
   border: 8px solid #ffffff;
   background-color: #ababab;
-  box-shadow: 9 2px 1px 0 #cfcfcf;
+  box-shadow:inset 9 2px 1px 0 #cfcfcf;
   border-radius: 50%;
   cursor: pointer;
 }
@@ -447,11 +424,61 @@ img {
   background: #f1f1f1;
 }
 
-max-price {
+.max-price {
   text-align: right;
 }
-/*.filters fieldset {
+
+.middle-part-page {
+  margin: 0;
+  padding:0;
+  
+  display: flex;
+
+  /* Временно, сегодня убрать*/
+  outline: 2px solid #12026b;
+}
+
+.filters {
+  margin: 0;
+  padding:0;
+  width: 261px;
+  /* Временно, сегодня убрать*/
+  outline: 2px solid #d40b2c;
+  margin-right: 100px;
+}
+
+.catalog-list-page-catalog {
+  margin: 0;
+  padding:0;
+  display: flex;
+  flex-wrap: wrap;
+ 
+  /* Временно, сегодня убрать*/
+  outline: 2px solid #d4440b;
+}
+
+.catalog-item-page-catalog {
+  margin: 0;
+  padding:0;
+
+  width: 360px;
+  height:610px;
+  margin-bottom: 40px;
+  
+  display: flex;
+  flex-direction: column;
+ 
+  margin-left:40px
+}
+
+.upper-item-part {
+  margin: 0;
+  padding:0;
+}
+
+.filters fieldset {
   border: none;
+
 }
 
 .filters legend {
@@ -506,13 +533,18 @@ max-price {
   color: rgba(0, 0, 0, 0.3);
   box-shadow:inset 0px 3px 0px 0 px rgba(0, 0, 0, 0.3);
 }
-*/
+
 .card {
+  position: relative;
+  right: 0px;
+  bottom: 180px;
+  z-index: 2;
   background-color: #eeeeee;
   width: 360px;
   height: 231px;
   margin-right: 40px;
-  display: none;
+  /* Временно, сегодня убрать*/
+  outline: 2px solid #d4440b;
 }
 
 .card-title {
@@ -581,17 +613,12 @@ max-price {
 }
 
 .social-button {
-  margin: 0px;
-  padding: 0px;
   display: flex;
   width: 79px;
   height: 79px;
   background-color: #e1e1e1;
   text-decoration: none;
-  border-top-left-radius: 40px;
-  border-top-right-radius: 40px;
-  border-bottom-left-radius: 40px;
-  border-bottom-right-radius: 40px;
+  border-radius: 50%;
   align-items: center;
   justify-content: center;
   margin-right: 12px;
@@ -604,7 +631,7 @@ max-price {
 
 .social-button:active {
   background-color:#d7373b;
-  box-shadow:0px 3px 0px 0px rgba(0, 1, 1, 0.1)
+  box-shadow:inset 0px 3px 0px 0px rgba(0, 1, 1, 0.1)
 }
 
 .social-button:active path {
@@ -700,7 +727,7 @@ max-price {
 .box-modal-letter {
   width: 960px;
   height: 590px;
-  box-shadow: 0px 20px 40px 0 rgba(0, 1, 1, 0.75);
+  box-shadow: inset 0px 20px 40px 0 rgba(0, 1, 1, 0.75);
 }
 
 .letter-button {
@@ -717,7 +744,28 @@ max-price {
 .letter-button:active {
   background-color: #d7373b;
   color: rgba(255, 255, 255, 0.3);
-  box-shadow: 0px 3px 0px 0px rgba(0, 1, 1, 0.1);
+  box-shadow: inset 0px 3px 0px 0px rgba(0, 1, 1, 0.1);
 }
 
 
+/*для фильтров на странице каталога*/
+.option {
+  display: block;
+  margin-bottom: 0.25em;
+}
+
+
+
+.check_input {
+  position:absolute;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.check_box {
+  position: absolute;
+  width: 1em;
+  height: 1em;
+  background-image: url(img/checkbox-off.svg);
+}
