--- a/css/style.css
+++ b/css/style.css
@@ -754,7 +754,9 @@ img {
   margin-bottom: 0.25em;
 }
 
-
+.check {
+  padding-left: 1.2em;
+}
 
 .check_input {
   position:absolute;
@@ -765,7 +767,8 @@ img {
 
 .check_box {
   position: absolute;
+  margin-left: -1.2em;
   width: 1em;
   height: 1em;
-  background-image: url(img/checkbox-off.svg);
+  background-image: url(..img/checkbox-off.svg);
 }
